encrypt-pre-alpha/chains/solana/program-sdk/dsl/tests/compile_fail/unknown_variable.stderr
error: unknown: b
 --> tests/compile_fail/unknown_variable.rs:8:17
  |
8 |     let x = a + b;
  |                 ^
